add load review

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,5 +6,12 @@
 
 
   }
+/* 
 
-
+  {order && order.length > 0 && (
+    <ul>
+        {order.map(reviewid => (
+              <li key={reviewid}>{spotReviews[reviewid].review}</li>
+        ))}
+    </ul>
+)} */
