--- a/frontend/src/component/EditSpotForm/EditSpotForm.css
+++ b/frontend/src/component/EditSpotForm/EditSpotForm.css
@@ -1,14 +1,19 @@
-.form-container {
+.editform-container {
     display: flex;
     flex-direction: column;
     align-items: center; /* Center horizontally */
     justify-content: center; /* Center vertically */
     margin: 20 auto;
     max-width: 600px;
+   position: absolute;
+        top: 300px;
+        left: 40%;
 
-}
+    }
 
-.form-container div {
+
+
+.editform-container div {
     width: 100%;
 }
 .images {
