--- a/frontend/src/component/SpotDetail/SpotDetail.css
+++ b/frontend/src/component/SpotDetail/SpotDetail.css
@@ -14,5 +14,19 @@
     display: flex;
     flex-direction: row;
     margin: 20px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
+
+.spot-detail {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+
+/* .pricing-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+} */
