--- a/frontend/src/component/Navigation/Navigation.css
+++ b/frontend/src/component/Navigation/Navigation.css
@@ -1,6 +1,5 @@
 .nav-list {
 list-style: none;
-padding: 0;
 margin: 0;
 display: flex;
 justify-content: space-between;
@@ -13,4 +12,28 @@ justify-content: space-between;
 }
 
 
+.nav-list a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #333; /* Set the color of the text */
+  }
 
+
+.logo {
+    height: 40px; /* Adjust the height as needed */
+    width: auto; /* Keeps the aspect ratio */
+    padding: 2px;
+  }
+
+  .logo-li {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-list .profile .create-spot-form-link {
+    margin-right: 20px; /* Adjust the space as needed */
+  }
+
+  .nav-list a:hover {
+    color: brown;
+  }
