--- a/frontend/src/component/Navigation/Navigation.css
+++ b/frontend/src/component/Navigation/Navigation.css
@@ -37,3 +37,9 @@ justify-content: space-between;
   .nav-list a:hover {
     color: brown;
   }
+
+
+  .profile {
+    display: flex;
+    align-items: center; /* Center items vertically */
+  }
