--- a/frontend/src/component/SpotReviews/SpotReviews.css
+++ b/frontend/src/component/SpotReviews/SpotReviews.css
@@ -31,3 +31,9 @@ ul {
   .confirm-modal {
     /* Add styles for the ConfirmReviewDeleteModal here */
   }
+
+
+  .delete-button {
+    width: 80px;
+    border-color: var(--f-k-smk-x);
+  }
