--- a/frontend/src/component/EditSpotForm/EditSpotForm.css
+++ b/frontend/src/component/EditSpotForm/EditSpotForm.css
@@ -28,7 +28,7 @@
 .location {
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin-bottom: 20px;
 }
 
 .signup-form .error-message {
