--- a/frontend/src/component/SpotIndexItem/SpotIndexItem.css
+++ b/frontend/src/component/SpotIndexItem/SpotIndexItem.css
@@ -55,7 +55,8 @@
 
 img {
         max-width: 100%; /* Ensure the image does not exceed the container width */
-        height: auto; /* Maintain the image's aspect ratio */
+        height: auto;
+        object-fit: cover;
         display: block; /* Remove extra spacing below inline images */
         margin: 0 auto; /* Center the image within its container */
 }
